@@ -41,26 +41,20 @@ publishing {
   }
 }
 
-project.ext.set("launcherClasspath", new org.gradle.api.internal.file.UnionFileCollection())
-project.ext.set("launcherClasses", new ArrayList())
-
-task addLauncherApps() {
-  project(":fulcrum-launcher").launcherClasspath += sourceSets.main.runtimeClasspath + sourceSets.test.runtimeClasspath
-  project(":fulcrum-launcher").launcherClasses += "com.obsidiandynamics.launcher.RunSampleApp"
-}
-
 task launch() {
-  dependsOn allprojects*.tasks*.findByName("testClasses")
+  dependsOn allprojects*.tasks*.findByName("classes"), allprojects*.tasks*.findByName("testClasses")
   doLast {
+    def launcherClasses = new ArrayList()
+    launcherClasses += "com.obsidiandynamics.launcher.RunSampleApp"
     def baseJvmArgs = "-XX:-MaxFDLimit -XX:+TieredCompilation -XX:+UseNUMA -XX:+UseCondCardMark " + 
-                      "-XX:-UseBiasedLocking -Xms2G -Xmx2G -Xss1M -XX:+UseG1GC -XX:MaxGCPauseMillis=200 " + 
+                      "-Xms2G -Xmx2G -Xss1M -XX:+UseG1GC -XX:MaxGCPauseMillis=200 " +
                       "-XX:InitiatingHeapOccupancyPercent=0 -Djava.net.preferIPv4Stack=true " + 
                       "-Dlauncher.package.compress.level=3"
     javaexec {
       systemProperties = System.properties
-      classpath = project(":fulcrum-launcher").launcherClasspath
-      main = "com.obsidiandynamics.launcher.Launcher"
-      args = project(":fulcrum-launcher").launcherClasses
+      classpath = sourceSets.main.compileClasspath + sourceSets.main.runtimeClasspath + sourceSets.test.compileClasspath + sourceSets.test.runtimeClasspath
+      mainClass = "com.obsidiandynamics.launcher.Launcher"
+      args = launcherClasses
       jvmArgs = Arrays.asList baseJvmArgs.split(" ")
       standardInput = System.in
     }
